SP:lab4 deep rework in progress. COM components in progress

--- a/SP/Code/Lab_4/Lab_4_COM/OS13_HTCOM/OS13_HTCOM.vcxproj
+++ b/SP/Code/Lab_4/Lab_4_COM/OS13_HTCOM/OS13_HTCOM.vcxproj
@@ -135,11 +135,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ClassFactory.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Interface.h" />
+    <ClInclude Include="OS13.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ClassFactory.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="OS13.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
