--- a/NAP/Code/Lab_8-10/ConcurrentServer/ConcurrentServer.vcxproj
+++ b/NAP/Code/Lab_8-10/ConcurrentServer/ConcurrentServer.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ed91ef7a-491d-4675-8a81-5b26b468a32b}</ProjectGuid>
+    <ProjectGuid>{af978900-00c4-49d6-83b7-e128b12fce1d}</ProjectGuid>
     <RootNamespace>ConcurrentServer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -126,7 +126,13 @@
     <ClCompile Include="ConcurrentServer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Server.h" />
+    <ClInclude Include="AcceptServer.h" />
+    <ClInclude Include="ConsolePipe.h" />
+    <ClInclude Include="DispatchServer.h" />
+    <ClInclude Include="Error.h" />
+    <ClInclude Include="GarbageCleaner.h" />
+    <ClInclude Include="Global.h" />
+    <ClInclude Include="ResponseServer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
