--- a/NAP/Code/Lab_8-10/RConsole/RConsole.vcxproj
+++ b/NAP/Code/Lab_8-10/RConsole/RConsole.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ed91ef7a-491d-4675-8a81-5b26b468a32b}</ProjectGuid>
-    <RootNamespace>ConcurrentServer</RootNamespace>
+    <ProjectGuid>{a16eae9c-1b15-444b-ad4e-876512802aa2}</ProjectGuid>
+    <RootNamespace>RConsole</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -123,10 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ConcurrentServer.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Server.h" />
+    <ClCompile Include="RConsole.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
