--- a/NAP/Code/Lab_8-10/RConsole/RConsole.vcxproj.filters
+++ b/NAP/Code/Lab_8-10/RConsole/RConsole.vcxproj.filters
@@ -15,13 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ConcurrentServer.cpp">
+    <ClCompile Include="RConsole.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Server.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
